--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,14 @@
 [package]
+edition = "2021"
 name = "procon22_image"
 version = "0.1.0"
-edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 base64 = "0.13.0"
 image = "0.24.3"
+lambda_runtime = "0.6.1"
 serde = "1.0.145"
 serde_json = "1.0.85"
+tokio = { version = "1.21.2", features = ["full"] }
