--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,8 @@ edition = "2021"
 [dependencies]
 base64 = "0.13.0"
 image = "0.24.3"
+rutie = "0.8.4"
 
 [lib]
-name = "procon22_image"
-crate-type = ["dylib"]
+name = "pro22kadai_image"
+crate-type = ["cdylib"]
