--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "procon22_image"
+name = "procon_image"
 version = "0.1.0"
 edition = "2021"
 
@@ -9,7 +9,9 @@ edition = "2021"
 base64 = "0.13.0"
 image = "0.24.3"
 rutie = "0.8.4"
+serde = { version = "1.0.145", features = ["derive"] }
+serde_json = "1.0.86"
 
 [lib]
-name = "pro22kadai_image"
+name = "procon_image"
 crate-type = ["cdylib"]
