--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,14 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+axum = "0.5.11"
+axum-aws-lambda = "0.1.0"
 base64 = "0.13.0"
 image = "0.24.4"
-lambda_runtime = "0.7.0"
-serde = "1.0.145"
-serde_json = "1.0.86"
-tokio = { version = "1.21.2", features = ["full"] }
+lambda_http = "0.5.2"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+tokio = { version = "1", features = ["full"] }
 
 # [lib]
 # name = "procon_image"
